think about it some thing.

--- a/doc/2.1.Adapter.md
+++ b/doc/2.1.Adapter.md
@@ -4,6 +4,10 @@
 
 适配器模式是一种结构性模式，其用处是用来衔接、扩展、适配旧的接口和新的接口，本身也隐含了委托/代理模式的思想。适配器模式本身包含三种：__类适配器、对象适配器、接口适配器__。本文着重介绍最常用的对象适配器模式。
 
+适配器模式与代理模式的区别是啥呢？其实要你的实现的目的。如果只是简单的两个接口的转发适配，那它就是适配器模式。如果转发实现的时候又加上了一些其它的通用逻辑（比如缓存，权限，日志等）那它就成了代理模式。
+
+出发点不一样。适配器模式里加上了日志或缓存处理就成了代理模式。
+
 ## 适配器模式样例
 
 观察下面的样例代码：(对象适配器模式，最常用的适配器模式)
